--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "typescript"
   ],
   "author": "Nripendra Nath Newa",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-graphql": "^0.6.1",
+    "graphql": "^0.8.2",
+    "graphql-tools": "^0.8.1"
+  }
 }
