--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}\\index.ts",
-            "cwd": "${workspaceRoot}"
+            "cwd": "${workspaceRoot}",
+            "stopOnEntry": false,
+            "sourceMaps": true,
+            "outDir": "${workspaceRoot}/dist"
         },
         {
             "type": "node",
