--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "Nripendra Nath Newa",
   "license": "MIT",
   "dependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.49",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2",
+    "graphql-subscriptions": "^0.2.1",
     "graphql-tools": "^0.8.1"
   }
 }
