--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": false,
-        "sourceMap": true,
         "inlineSources": true,
-        "inlineSourceMap": true
+        "inlineSourceMap": true,
+        "outDir": "./dist"
     },
-    "files": []
+    "exclude": [
+        "node_modules"
+    ]
 }
