--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/core-js": "^0.9.34",
+    "@types/express": "^4.0.34",
+    "@types/express-graphql": "0.0.33",
+    "@types/graphql": "^0.8.2",
     "@types/node": "^6.0.49",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
