--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/express": "^4.0.34",
     "@types/express-graphql": "0.0.33",
     "@types/node": "^6.0.49",
+    "@types/node-fetch": "^1.6.5",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2",
     "graphql-subscriptions": "^0.2.1",
-    "graphql-tools": "^0.8.1"
+    "graphql-tools": "^0.8.1",
+    "node-fetch": "^1.6.3"
   }
 }
